--- a/estilos.css
+++ b/estilos.css
@@ -1,11 +1,46 @@
-h1}{
-    text-decoration-color: whitesmoke;
-}
-
 input{
-    background-color:darkgray;
+    background-color: whitesmoke;
+	border: 1px solid rgba(0,0,0,0.9);
+	border-radius: 3px;
+    width: 250px;
+	height: 30px;
+    color: black;
     
 }
+div{
+    background-color:rgba(0.5,0.4,0,.05);
+    background:inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 800px;
+    height: 500px;
+    border-radius: 5px;
+    background: rgba(3,3,3,0.25);
+    box-shadow: 5px 5px 50px #000;
+    backdrop-filter: blur(5px);
+}
+button{
+    margin-top: 20px;
+     background:#0184ff;
+  color:white;
+  font-weight:bold;
+  cursor:pointer;
+  font-size:13px;
+    padding:5px 20px;
+  border:1px solid rgba(0,0,0,0.4);
+  text-shadow:0 -1px 0 rgba(0,0,0,0.4);
+  box-shadow:
+    inset 0 1px 0 rgba(255,255,255,0.3),
+    inset 0 10px 10px rgba(255,255,255,0.1);
+  border-radius:0.3em;
+}
 body{
-    background-color: azure;
+    background-image: url(fondo.jpg);
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: beige;
+    text-align: center;    
 }
